# linklink

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml
agent/: Cargo.toml
agent/src/: main.rs
agent/src/commands/: auth.rs  invite.rs  mod.rs  peers.rs  register.rs  relay.rs  status.rs  token_store.rs  tunnel.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  gossip.rs  invite.rs  keystore.rs  lib.rs  stun.rs  wireguard.rs
deploy/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml
deploy/scripts/: install-agent.sh  setup-hub.sh
deploy/systemd/: linklink-agent.service
docs/: architecture.md  security.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AuditLogs.tsx  Dashboard.tsx  Devices.tsx  Login.tsx
server/: Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/api/: health.go  middleware.go  router.go
server/internal/audit/: service.go
server/internal/auth/: dev_token.go  device_flow.go  jwt.go  jwt_test.go  middleware.go
server/internal/config/: config.go
server/internal/db/: db.go
server/internal/db/migrations/: 001_create_enums.sql  002_create_users.sql  003_create_networks.sql  004_create_hubs.up.sql  005_create_devices.sql  006_create_acl_rules.up.sql  007_create_refresh_tokens.up.sql  008_create_audit_logs.up.sql
server/internal/devices/: handler.go  ipalloc.go  ipalloc_test.go  service.go
