[workspace]
members = ["core", "agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["linklink contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
