[package]
name = "linklink-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
base64       = { workspace = true }
hex          = { workspace = true }

x25519-dalek = { version = "2", features = ["static_secrets"] }
rand         = "0.8"
toml         = "0.8"
regex        = "1"
zeroize      = { version = "1", features = ["derive"] }
sha2         = "0.10"

[dev-dependencies]
tempfile     = "3"
tokio        = { version = "1", features = ["full", "test-util"] }
